# Workstation

./: .gitignore  CMakeLists.txt  README.md
build_no_unpack/: workstation_arm_control_service  workstation_bt_service
cmake/: install.sh.in  unpack_padded_elf.py
docs/: 00_架构与开发目的.md  01_快速开始.md  02_配置项.md  03_架构与数据流.md  04_BT节点与示例XML.md  05_部署_systemd.md  06_观测与故障恢复.md  README.md  RPC调用示例（arm_control与bt_service）.md
include/workstation/: arm_control_rpc.h  node.h  service.h  spin.h  status.h
resources/: bt.xml  bt.xml.sample  bt_luggage_mvp.xml  workstation.env.sample
services/: README.md
services/arm_control/: README.md  临时命令.md
services/arm_control/include/: app.h
services/arm_control/include/internal/: arm_command_handler.h  arm_command_processor.h  arm_control_config.h  arm_control_internal.h  arm_control_loop.h  arm_error_codes.h  arm_rpc_handlers.h  arm_rpc_service_config.h  rpc_control_plane.h  rpc_kv_codec.h
services/arm_control/include/wxz_workstation/arm_control/: app.h
services/arm_control/include/wxz_workstation/arm_control/internal/: arm_command_handler.h  arm_control_internal.h  arm_error_codes.h
services/arm_control/include/wxz_workstation/arm_control/internal/adapters/: arm_control_dds_adapter.h
services/arm_control/include/wxz_workstation/arm_control/internal/domain/: arm_control_domain.h
services/arm_control/src/: app.cpp  arm_cmd_demo.cpp  arm_cmd_robot_mode.cpp  arm_command_handler.cpp  arm_command_handler.h  arm_command_processor.cpp  arm_control_config.cpp  arm_control_internal.cpp  arm_control_internal.h  arm_control_loop.cpp  arm_error_codes.h  arm_rpc_handlers.cpp  arm_rpc_service_config.cpp  main.cpp  offline_selftest.cpp  rpc_control_plane.cpp  rpc_kv_codec.cpp
services/arm_control/src/adapters/: arm_control_dds_adapter.cpp  arm_control_dds_adapter.h
services/arm_control/src/domain/: arm_control_domain.cpp  arm_control_domain.h
services/bt_service/include/: app.h  app_config.h  arm_nodes.h  arm_status_cache.h  arm_types.h  arm_wiring.h  bt_runtime_wiring.h  bt_tree_runner.h  dds_channels.h  main_loop.h  node_wiring.h  rpc_control_plane.h
services/bt_service/include/wxz_workstation/bt_service/: app.h  app_config.h  arm_nodes.h  arm_status_cache.h  arm_types.h  arm_wiring.h  bt_runtime_wiring.h  bt_tree_runner.h  dds_channels.h  main_loop.h  node_wiring.h
services/bt_service/src/: app.cpp  app_config.cpp  arm_nodes.cpp  arm_status_cache.cpp  arm_types.cpp  arm_wiring.cpp  bt_runtime_wiring.cpp  bt_tree_runner.cpp  dds_channels.cpp  main.cpp  main_loop.cpp  node_wiring.cpp  rpc_control_plane.cpp
